--- a/WebsiteStyle.css
+++ b/WebsiteStyle.css
@@ -40,3 +40,36 @@ h2
     background-size:cover;
     background-repeat: no-repeat;
 }
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    display: flex;
+  justify-content: space-between;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  li{
+    display:inline;
+  }
