--- a/WebsiteStyle.css
+++ b/WebsiteStyle.css
@@ -73,3 +73,55 @@ h2
   li{
     display:inline;
   }
+
+  /*Aaryan css*/
+  h1{
+    font-family: fantasy;
+    font-size: 80px;
+    color:yellow;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+    margin-bottom: 0%;
+}
+
+html{
+    background-color: orange;
+}
+
+h2{
+    font-family: cursive;
+    display: flex;
+    justify-content: center;
+}
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    display: flex;
+  justify-content: space-between;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  li{
+    display:inline;
+  }
